add filter & sidebar & script

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -271,46 +271,46 @@ p {
 
   &__item {
     position: relative;
-  }
 
-  &__btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 8px;
-    border: 1px solid var(--grey2, #EFEFEF);
-    padding: 8px 37px 8px 15px;
-    background: transparent;
-    color: var(--black, #2E2D2D);
-    position: relative;
+    &-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      border-radius: 8px;
+      border: 1px solid var(--grey2, #EFEFEF);
+      padding: 8px 37px 8px 15px;
+      background: transparent;
+      color: var(--black, #2E2D2D);
+      position: relative;
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      right: 15px;
-      transform: translateY(-50%) rotate(45deg);
-      display: block;
-      width: 9px;
-      height: 2px;
-      background: var(--black, #2E2D2D);
-      border-radius: 1px;
-      transition: all 0.2s ease-out;
-    }
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: 15px;
+        transform: translateY(-50%) rotate(45deg);
+        display: block;
+        width: 9px;
+        height: 2px;
+        background: var(--black, #2E2D2D);
+        border-radius: 1px;
+        transition: all 0.2s ease-out;
+      }
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      right: 10px;
-      transform: translateY(-50%) rotate(-45deg);
-      display: block;
-      width: 9px;
-      height: 2px;
-      background: var(--black, #2E2D2D);
-      border-radius: 1px;
-      transition: all 0.2s ease-out;
+      &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%) rotate(-45deg);
+        display: block;
+        width: 9px;
+        height: 2px;
+        background: var(--black, #2E2D2D);
+        border-radius: 1px;
+        transition: all 0.2s ease-out;
+      }
     }
   }
 
@@ -342,18 +342,18 @@ p {
 
   &__item-active {
 
-    .filter__btn {
+    .filter__item-btn {
       border-radius: 8px 8px 0 0;
-      border-bottom: 0;
+      border-bottom-color: transparent;
     }
 
-    .filter__btn::before {
+    .filter__item-btn::before {
       background: var(--green, #179860);
       transform: rotate(-45deg);
       transition: all 0.2s ease-out;
     }
 
-    .filter__btn::after {
+    .filter__item-btn::after {
       background: var(--green, #179860);
       transform: rotate(45deg);
       transition: all 0.2s ease-out;
@@ -362,6 +362,23 @@ p {
     .filter__list {
       display: block;
       transition: all 0.2s ease-out;
+    }
+  }
+
+  &__btn {
+    display: none;
+    align-items: center;
+    gap: 10px;
+    height: 100%;
+    border-radius: 8px;
+    padding: 8px 10px;
+    color: var(--white, #fff);
+    background: var(--black, #2E2D2D);
+
+    &-img {
+      width: 17px;
+      height: 17px;
+      object-fit: cover;
     }
   }
 }
@@ -389,5 +406,113 @@ p {
 
   .slick-active button {
     background: var(--black, #2E2D2D);
+  }
+}
+
+input[type=checkbox] {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+
+  &:checked+label::before {
+    background-color: var(--brown, #857067);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='9' viewBox='0 0 12 9'%3e%3cpath fill='none' d='M2 3.66667L5.2 7L10 2' stroke='white' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' /%3e%3c/svg%3e");
+  }
+
+  &+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    gap: 10px;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      flex-shrink: 0;
+      flex-grow: 0;
+      border: 1px solid var(--brown, #857067);
+      border-radius: 4px;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 50% 50%;
+    }
+  }
+}
+
+input[type=radio] {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+
+  &:checked+label::before {
+    background-color: var(--brown, #857067);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+  }
+
+  &+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    gap: 10px;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      flex-shrink: 0;
+      flex-grow: 0;
+      border: 1px solid var(--brown, #857067);
+      border-radius: 50%;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 50% 50%;
+    }
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  border: 1px solid var(--grey2, #EFEFEF);
+  border-radius: 8px;
+
+  &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--grey, #A7A7A7);
+    border-radius: 8px;
+    background: transparent;
+    padding: 0 20px;
+    width: 100%;
+
+    &.disabled {
+      pointer-events: none;
+      color: var(--grey2, #EFEFEF);
+    }
+  }
+
+  &__list {
+    display: flex;
+    gap: 10px;
+  }
+
+  &__item {
+
+    &-link,
+    &-dots {
+      border-radius: 8px;
+      color: var(--black, #2E2D2D);
+      background: var(--bg, #F9F9F9);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 52px;
+      height: 52px;
+    }
   }
 }
