--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,6 +8,7 @@
 @import 'elements/footer.scss';
 
 @import 'pages/index.scss';
+@import 'pages/projects.scss';
 @import 'pages/site-map.scss';
 @import 'pages/privacy.scss';
 @import 'pages/technical-supervision.scss';
