--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,11 +15,11 @@
 @import 'pages/work.scss';
 
 @import 'pages/vacancies.scss';
-
-
-
+@import 'pages/partners.scss';
+@import 'pages/guarantees.scss';
+@import 'pages/404.scss';
 @import 'pages/payment-methods.scss';
-
+@import 'pages/reviews.scss';
 
 @import 'pages/privacy.scss';
 
