--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,9 +20,9 @@
 @import 'pages/404.scss';
 @import 'pages/payment-methods.scss';
 @import 'pages/reviews.scss';
-
+@import 'pages/documents.scss';
 @import 'pages/privacy.scss';
-
+@import 'pages/contacts.scss';
 @import 'pages/technical-supervision.scss';
 @import 'pages/site-map.scss';
 @import 'pages/projection.scss';
