--- a/app/scss/pages/technical-supervision.scss
+++ b/app/scss/pages/technical-supervision.scss
@@ -176,19 +176,21 @@
 
   &__items {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
   }
 
   &__item {
-    max-width: 270px;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    width: calc(25% - 22.5px);
     border-radius: 30px;
     overflow: hidden;
     position: relative;
 
     &-img {
-      width: 100%;
-      height: auto;
+      width: auto;
+      height: 100%;
       object-fit: cover;
       padding: 30px 30px 16px;
       background: var(--white, #fff);
