--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -437,7 +437,7 @@
     height: 80px;
     top: -80px;
     width: 100%;
-    left: -33%;
+    left: -25%;
   }
 
   .payment__item-img {
@@ -1281,6 +1281,10 @@
     padding: 30px 5px;
   }
 
+  .licenses__item {
+    height: auto;
+  }
+
   // contacts
   .contacts__map {
     border-radius: 20px;
@@ -1343,6 +1347,10 @@
     width: 100%;
   }
 
+  .about-page .construction {
+    padding: 80px 0;
+  }
+
   .history__inner {
     gap: 20px;
   }
@@ -1363,6 +1371,68 @@
     height: 20px;
     bottom: -20px;
     background: radial-gradient(circle at right bottom, transparent 20px, var(--white, #fff) 20px);
+  }
+
+  .about-page .construction__item-title::before {
+    width: 20px;
+    height: 20px;
+    background: radial-gradient(circle at right top, transparent 20px, var(--black, #2E2D2D) 20px);
+    position: absolute;
+    top: -20px;
+  }
+
+  .about-page .construction__item-title::after {
+    width: 20px;
+    height: 20px;
+    right: -20px;
+    background: radial-gradient(circle at right top, transparent 20px, var(--black, #2E2D2D) 20px);
+  }
+
+  .social {
+    display: none;
+  }
+
+  /* projection */
+  .supervision__content {
+    max-width: 460px;
+  }
+
+  .supervision__img {
+    width: 380px;
+  }
+
+  .projection-page .projection-stages__inner {
+    padding: 80px 0;
+  }
+
+  .projection-page .projection-stages__content {
+    width: 100%;
+  }
+
+  .projection-page .projection-stages__img {
+    width: 380px;
+    height: fit-content;
+  }
+
+  .projection-page .licenses__inner {
+    padding: 80px 0;
+  }
+
+  .projection-page .projection-types__inner {
+    padding: 80px 0;
+  }
+
+  .projection-composition__inner {
+    padding: 80px 0;
+  }
+
+  /* supervision-page */
+  .supervision-page .licenses__inner {
+    padding: 80px 0;
+  }
+
+  .supervision-page .supervision-advantages__inner {
+    padding: 80px 0;
   }
 }
 
@@ -1409,6 +1479,7 @@
     width: 100%;
     align-items: flex-start;
     position: unset;
+    gap: unset;
   }
 
   .banner__item,
@@ -1455,6 +1526,30 @@
   .contacts__map iframe {
     height: 470px;
   }
+
+  /* projection */
+  .supervision__content {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .supervision__img {
+    top: 100%;
+  }
+
+  .projection-page .projection-types__inner {
+    padding: 80px 0 80px;
+    width: calc(100% - 480px);
+  }
+
+  .projection-page .projection-stages__inner {
+    gap: 40px;
+  }
+
+  .supervision-page .supervision-advantages__inner {
+    padding: 80px 0 80px;
+    width: calc(100% - 480px);
+  }
 }
 
 @media (max-width: 850px) {
@@ -1471,6 +1566,35 @@
     height: 45px;
     position: absolute;
     bottom: 108px;
+  }
+}
+
+@media (max-width: 800px) {
+  .supervision.block {
+    margin: 0;
+  }
+
+  .supervision__content {
+    margin-bottom: 40px;
+  }
+
+  .supervision__img {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: -130px;
+    max-width: 380px;
+    width: 100%;
+  }
+
+  .projection-page .projection-types__inner {
+    padding: 189px 0 60px;
+    width: 100%;
+  }
+
+  .supervision-page .supervision-advantages__inner {
+    padding: 189px 0 60px;
+    width: 100%;
   }
 }
 
@@ -1628,6 +1752,10 @@
     font-size: 20px;
   }
 
+  .num {
+    font-size: 32px;
+  }
+
   .block {
     margin-bottom: 60px;
   }
@@ -1720,11 +1848,11 @@
   }
 
   .advantages__img {
-    margin: 0 0 0 calc(100% - 630px);
+    margin: 0 0 0 calc(100% - 220px - 630px);
   }
 
   .advantages__block:last-child .advantages__img {
-    margin: 0 calc(100% - 630px) 0 0;
+    margin: 0 calc(100% - 220px - 630px) 0 0;
   }
 
   .stages__block {
@@ -1825,7 +1953,7 @@
   }
 
   .blog {
-    margin: 60px 0 192px;
+    margin: 60px 0 152px;
   }
 
   .blog__inner {
@@ -1910,6 +2038,7 @@
   }
 
   .case__item-body {
+    max-width: 100%;
     width: 100%;
     padding: 0;
   }
@@ -1942,6 +2071,15 @@
     right: -30px;
     border-radius: 0 15px 15px 0;
     transform: translateY(-50%);
+  }
+
+  .command__slider .slick-list {
+    margin-bottom: 20px;
+  }
+
+  .command__slider .slick-dots {
+    width: 100%;
+    margin-left: 0;
   }
 
   .case__cover-btn {
@@ -1980,10 +2118,6 @@
 
   .callback__form {
     flex-direction: column;
-  }
-
-  .callback__item {
-    width: 100%;
   }
 
   .callback__img {
@@ -2422,6 +2556,10 @@
     width: 100%;
   }
 
+  .about-us {
+    padding: 60px 0;
+  }
+
   .about-us__inner {
     flex-direction: column-reverse;
     align-items: center;
@@ -2445,7 +2583,7 @@
 
   .blog .decor {
     width: 100%;
-    left: -34%;
+    left: -25%;
   }
 
   .about-page .case__slider .slick-arrow {
@@ -2464,6 +2602,50 @@
     height: 15px;
     bottom: -15px;
     background: radial-gradient(circle at right bottom, transparent 15px, var(--white, #fff) 15px);
+  }
+
+  .about-page .construction {
+    padding: 60px 0;
+  }
+
+  .case__list {
+    width: fit-content;
+  }
+
+  .case__list-item {
+    min-width: 140px;
+  }
+
+  /* projection */
+  .projection-page .projection-stages__inner {
+    flex-direction: column;
+    padding: 60px 0;
+  }
+
+  .projection-page .projection-stages__img {
+    width: 100%;
+  }
+
+  .projection-page .licenses__inner {
+    padding: 60px 0;
+  }
+
+  .projection-composition__inner {
+    padding: 60px 0;
+  }
+
+  /* supervision-page */
+  .supervision-page .licenses__inner {
+    padding: 60px 0;
+  }
+
+  .supervision-page .why__inner {
+    flex-direction: column-reverse;
+    gap: 20px;
+  }
+
+  .supervision-page .why__content {
+    gap: 20px;
   }
 }
 
@@ -2676,9 +2858,33 @@
     right: 0;
   }
 
+  .calculation__calc-item {
+    gap: 20px;
+  }
+
+  .calculation__banner {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .calculation__banner-item {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 60px;
+    width: 100%;
+  }
+
+  .calculation__banner button {
+    width: 100%;
+  }
+
   .callback__inner {
     gap: 30px;
     padding: 30px 30px 174px 30px;
+  }
+
+  .callback__item {
+    width: 100%;
   }
 
   // sitemap
@@ -2721,6 +2927,10 @@
     width: calc(50% - 12px);
   }
 
+  .licenses__item {
+    width: calc(50% - 6px);
+  }
+
   // about
   .about__inner {
     padding-top: 270px;
@@ -2737,6 +2947,10 @@
 
   .about-page .construction__item {
     width: 100%;
+  }
+
+  .about-page .construction__item-img {
+    height: 300px;
   }
 
   .command__item-desc {
@@ -2763,6 +2977,9 @@
     z-index: 1000;
     background: var(--white, #fff);
   }
+
+  /* projection */
+
 }
 
 @media (max-width: 480px) {
@@ -2814,6 +3031,10 @@
 
   .case__slider .slick-arrow {
     top: calc(20% - 20px);
+  }
+
+  .stages__item {
+    width: calc(100% - 12px);
   }
 
   // partners
