--- a/app/scss/pages/about.scss
+++ b/app/scss/pages/about.scss
@@ -39,6 +39,10 @@
     border-radius: 30px;
     background: var(--bg, #F9F9F9);
     width: fit-content;
+
+    &-num {
+      white-space: nowrap;
+    }
   }
 
   &__rec {
@@ -151,6 +155,11 @@
   .case {
     &__slider-item {
       padding: 0;
+      opacity: 0;
+
+      &.slick-slide.slick-current .case__cover-btn {
+        display: none;
+      }
     }
 
     &__slider .slick-track {
@@ -202,5 +211,87 @@
       background: radial-gradient(circle at right top, transparent 30px, var(--black, #2E2D2D) 30px);
     }
   }
+}
 
+.command {
+
+  &__head {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 40px;
+  }
+
+  &__slider {
+    width: calc(100% + 30px);
+    margin-left: -15px;
+
+    .slick-arrow {
+      position: absolute;
+      top: -92px;
+      right: 15px;
+      background: transparent;
+      width: 52px;
+      height: 52px;
+      border-radius: 10px;
+      border: 1px solid var(--grey2, #EFEFEF);
+
+      &.slick-prev {
+        right: 77px;
+      }
+    }
+
+    &-item {
+      margin: 0 15px;
+    }
+  }
+
+  &__item {
+
+    &-block {
+      position: relative;
+      margin-bottom: 20px;
+    }
+
+    &-photo {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+      border-radius: 30px 30px 30px 0;
+    }
+
+    &-name {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background: var(--white, #fff);
+      border-radius: 0 30px 0 0;
+      padding: 30px 30px 0 0;
+
+      &::before {
+        content: "";
+        width: 30px;
+        height: 30px;
+        background: radial-gradient(circle at right top, transparent 30px, var(--white, #fff) 30px);
+        position: absolute;
+        top: -30px;
+        left: 0;
+        z-index: 2;
+      }
+
+      &::after {
+        content: "";
+        width: 30px;
+        height: 30px;
+        background: radial-gradient(circle at right top, transparent 30px, var(--white, #fff) 30px);
+        position: absolute;
+        bottom: 0;
+        right: -30px;
+        z-index: 2;
+      }
+    }
+  }
 }
