--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -34,7 +34,7 @@
     border-radius: 0 0 30px 30px;
     position: absolute;
     top: 0;
-    left: -15px;
+    left: 15px;
 
     &::before {
       content: "";
@@ -147,6 +147,12 @@
     .slick-slide {
       margin: 0 100px 0 0;
     }
+
+    .case__slider-item.slick-current.slick-active,
+    .case__slider-item.slick-current.slick-active+.case__slider-item {
+      opacity: 1;
+      transition: opacity 0.1s ease-out;
+    }
   }
 
   &__item {
@@ -167,7 +173,6 @@
     width: 100%;
 
     &-img {
-      width: 100%;
       object-fit: cover;
       border-radius: 30px;
       position: relative;
@@ -460,6 +465,7 @@
     &-item {
       display: flex;
       flex-direction: column;
+      align-items: center;
 
       .small {
         color: var(--grey, #A7A7A7);
@@ -467,6 +473,8 @@
     }
 
     &-price {
+      white-space: nowrap;
+
       &::after {
         content: " ₽";
       }
@@ -684,11 +692,12 @@
 
     &-line {
       content: "";
-      width: calc(100% - 44px);
+      width: 100%;
       height: 8px;
       position: absolute;
       top: 91px;
-      left: 38px;
+      left: 30px;
+      overflow: hidden;
     }
 
     &-num {
