--- a/app/scss/pages/projection.scss
+++ b/app/scss/pages/projection.scss
@@ -64,6 +64,7 @@
   &__inner {
     display: flex;
     justify-content: space-between;
+    gap: 100px;
     padding: 100px 0;
   }
 
@@ -124,17 +125,39 @@
     color: var(--grey, #A7A7A7);
   }
 
-  &__items {
-    display: flex;
-    gap: 30px;
+  &__slider {
     margin-bottom: 40px;
+    margin-left: -15px;
+    width: calc(100% + 30px);
+
+    &-item {
+      margin: 0 15px;
+    }
+
+    .slick-list {
+      margin-bottom: 20px;
+      overflow: visible;
+    }
+
+    .slick-dots {
+      margin-left: 15px;
+      width: calc(100% - 30px);
+    }
+
+    .slick-dots .slick-active button {
+      opacity: 1;
+    }
+
+    .slick-dots button {
+      opacity: 0.1;
+      background: var(--white, #fff);
+    }
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    width: 33%;
     padding: 60px 30px 30px;
     border-radius: 30px;
     background: var(--brown2, #353434);
@@ -168,127 +191,16 @@
   }
 }
 
-.command {
+.projection-page {
+  .licenses {
+    background: var(--bg, #F9F9F9);
 
-  &__head {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 40px;
-  }
-
-  &__slider {
-
-    .slick-arrow {
-      position: absolute;
-      top: -92px;
-      right: 0;
-      background: transparent;
-      width: 52px;
-      height: 52px;
-      border-radius: 10px;
-      border: 1px solid var(--grey2, #EFEFEF);
-
-      &.slick-prev {
-        right: 62px;
-      }
-    }
-  }
-
-  &__item {
-
-    &-block {
-      position: relative;
-      margin-bottom: 20px;
+    &__inner {
+      padding: 100px 0;
     }
 
-    &-photo {
-      border-radius: 30px 30px 30px 0;
-    }
-
-    &-name {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      background: var(--white, #fff);
-      border-radius: 0 30px 0 0;
-      padding: 30px 30px 0 0;
-
-      &::before {
-        content: "";
-        width: 30px;
-        height: 30px;
-        background: radial-gradient(circle at right top, transparent 30px, var(--white, #fff) 30px);
-        position: absolute;
-        top: -30px;
-        left: 0;
-        z-index: 2;
-      }
-
-      &::after {
-        content: "";
-        width: 30px;
-        height: 30px;
-        background: radial-gradient(circle at right top, transparent 30px, var(--white, #fff) 30px);
-        position: absolute;
-        bottom: 0;
-        right: -30px;
-        z-index: 2;
-      }
-    }
-  }
-}
-
-.licenses {
-  background: var(--bg, #F9F9F9);
-
-  &__inner {
-    padding: 100px 0;
-  }
-
-  &__head {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 40px;
-  }
-
-  &__suptitle {
-    color: var(--grey, #A7A7A7);
-  }
-
-  &__items {
-    display: flex;
-    gap: 30px;
-  }
-
-  &__item {
-    max-width: 270px;
-    width: 100%;
-    border-radius: 30px;
-    overflow: hidden;
-    position: relative;
-
-    &-img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      padding: 30px 30px 16px;
-      background: var(--white, #fff);
-    }
-
-    &-name {
-      position: absolute;
-      bottom: 0;
-      z-index: 1;
-      width: 100%;
-      height: auto;
-      padding: 30px;
-      background: var(--grey2, #EFEFEF);
-      text-align: center;
+    &__item {
+      border: 0;
     }
   }
 }
