--- a/app/scss/pages/technical-supervision.scss
+++ b/app/scss/pages/technical-supervision.scss
@@ -1,219 +1,71 @@
-.supervision {
+.supervision-page {
 
-  &__inner {
-    position: relative;
-  }
+  .supervision-advantages {
+    background: var(--bg, #F9F9F9);
 
-  &__content {
-    width: 50%;
-  }
-
-  &__text {
-    margin-bottom: 40px;
-  }
-
-  &__img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 30px;
-    width: 470px;
-    height: auto;
-    object-fit: cover;
-  }
-}
-
-.supervision-advantages {
-  background: var(--bg, #F9F9F9);
-
-  &__inner {
-    width: 50%;
-    padding: 100px 0;
-  }
-
-  &__title {
-    margin-bottom: 10px;
-  }
-
-  &__suptitle {
-    color: var(--grey, #A7A7A7);
-    margin-bottom: 40px;
-  }
-
-  &__list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  &__item {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    &-img {
-      width: 12px;
-      height: auto;
-    }
-  }
-}
-
-.command {
-
-  &__inner {}
-
-  &__head {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 40px;
-  }
-
-  &__slider {
-    width: calc(100% + 30px);
-    margin-left: -15px;
-
-    .slick-arrow {
-      position: absolute;
-      top: -92px;
-      right: 15px;
-      background: transparent;
-      width: 52px;
-      height: 52px;
-      border-radius: 10px;
-      border: 1px solid var(--grey2, #EFEFEF);
-
-      &.slick-prev {
-        right: 77px;
-      }
+    &__inner {
+      width: 50%;
+      padding: 100px 0;
     }
 
-    &-item {
-      margin: 0 15px;
-    }
-  }
-
-  &__item {
-
-    &-block {
-      position: relative;
-      margin-bottom: 20px;
+    &__title {
+      margin-bottom: 10px;
     }
 
-    &-photo {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      border-radius: 30px 30px 30px 0;
+    &__suptitle {
+      color: var(--grey, #A7A7A7);
+      margin-bottom: 40px;
     }
 
-    &-name {
+    &__list {
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      background: var(--white, #fff);
-      border-radius: 0 30px 0 0;
-      padding: 30px 30px 0 0;
+      gap: 20px;
+    }
 
-      &::before {
-        content: "";
-        width: 30px;
-        height: 30px;
-        background: radial-gradient(circle at right top, transparent 30px, var(--white, #fff) 30px);
-        position: absolute;
-        top: -30px;
-        left: 0;
-        z-index: 2;
-      }
+    &__item {
+      display: flex;
+      align-items: center;
+      gap: 10px;
 
-      &::after {
-        content: "";
-        width: 30px;
-        height: 30px;
-        background: radial-gradient(circle at right top, transparent 30px, var(--white, #fff) 30px);
-        position: absolute;
-        bottom: 0;
-        right: -30px;
-        z-index: 2;
+      &-img {
+        width: 12px;
+        height: auto;
       }
     }
   }
-}
 
-.why {
+  .why {
 
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    &__inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__content {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+      max-width: 670px;
+    }
+
+    &__img {
+      width: 370px;
+      height: auto;
+      object-fit: cover;
+    }
   }
 
-  &__content {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    max-width: 670px;
+  .licenses {
+    background: var(--bg, #F9F9F9);
   }
 
-  &__img {
-    width: 370px;
-    height: auto;
-    object-fit: cover;
-  }
-}
-
-.licenses {
-  background: var(--bg, #F9F9F9);
-
-  &__inner {
+  .licenses__inner {
     padding: 100px 0;
   }
 
-  &__head {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 40px;
-  }
-
-  &__suptitle {
-    color: var(--grey, #A7A7A7);
-  }
-
-  &__items {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-
-  &__item {
-    display: flex;
-    justify-content: center;
-    width: calc(25% - 22.5px);
-    border-radius: 30px;
-    overflow: hidden;
-    position: relative;
-
-    &-img {
-      width: auto;
-      height: 100%;
-      object-fit: cover;
-      padding: 30px 30px 16px;
-      background: var(--white, #fff);
-    }
-
-    &-name {
-      position: absolute;
-      bottom: 0;
-      z-index: 1;
-      width: 100%;
-      height: auto;
-      padding: 30px;
-      background: var(--grey2, #EFEFEF);
-      text-align: center;
-    }
+  .licenses__item {
+    border: 0;
   }
 }
