--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -128,6 +128,9 @@
           <a class="footer__bottom-link small" href="#!">
             Политика в отношении обработки персональных данных
           </a>
+          <a class="footer__bottom-link small" href="#!">
+            Информация
+          </a>
         </div>
         <div class="footer__social">
           <a class="footer__social-link" href="https://vk.com/dsk_vira">
