--- a/app/components/header.html
+++ b/app/components/header.html
@@ -65,8 +65,8 @@
           <div class="container">
             <div class="head__inner">
               <div class="head__logo">
-                <a class="head__logo-link" href="#!">
-                  <img class="head__logo-img" src="images/logo.svg" alt="logo">
+                <a class="head__logo-link" href="/">
+                  <img class="head__logo-img" src="images/logo-head.svg" alt="logo">
                 </a>
                 <div class="head__logo-item">
                   <h4 class="head__logo-title">Экологичные</h4>
@@ -105,7 +105,7 @@
                   <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
                 </div>
                 <div class="head__info-item">
-                  <button class="btn-green menu-1 modal-call" type="button" data-id="spinner">
+                  <button class="btn-green menu-1 modal-call" type="button" data-id="wheel">
                     Заказать звонок
                   </button>
                 </div>
