--- a/app/components/modal.html
+++ b/app/components/modal.html
@@ -36,21 +36,46 @@
   <div class="modal" id="spinner">
     <div class="modal__box">
       <button class="modal__close-btn">
-        <svg width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M2.09082 0.03125L22.9999 22.0294L20.909 24.2292L-8.73579e-05 2.23106L2.09082 0.03125Z"
-            fill="#333333" />
-          <path d="M0 22.0295L20.9091 0.0314368L23 2.23125L2.09091 24.2294L0 22.0295Z" fill="#333333" />
+        <svg viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2.09082 0.03125L22.9999 22.0294L20.909 24.2292L-8.73579e-05 2.23106L2.09082 0.03125Z" />
+          <path d="M0 22.0295L20.9091 0.0314368L23 2.23125L2.09091 24.2294L0 22.0295Z" />
         </svg>
       </button>
-
-      <div class="modal__head">
+      <div class="modal__content">
         <img class="modal__img" src="../images/spinner/spinner-title.png" alt="">
         <h2 class="modal__title">5 подарков от Vira получи свой</h2>
         <button class="btn-green" type="submit">Получить подарок</button>
         <p class="modal__text">При нажатии на кнопку «Получить подарок» вы соглашаетесь с условиями акции. Подробнее
           об условиях акции в разделе Информация</p>
       </div>
+    </div>
+  </div>
 
+  <div class="modal" id="wheel">
+    <div class="modal__box">
+      <button class="modal__close-btn">
+        <svg viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2.09082 0.03125L22.9999 22.0294L20.909 24.2292L-8.73579e-05 2.23106L2.09082 0.03125Z" />
+          <path d="M0 22.0295L20.9091 0.0314368L23 2.23125L2.09091 24.2294L0 22.0295Z" />
+        </svg>
+      </button>
+
+      <!-- главный блок -->
+      <div class="deal-wheel">
+        <!-- блок с призами -->
+        <ul class="spinner"></ul>
+        <!-- язычок барабана -->
+        <div class="ticker"></div>
+      </div>
+
+      <div class="modal__content">
+        <div class="modal__item">
+          <img class="modal__item-img" src="../images/icons/spinner-gift.svg" alt="">
+          <h6 class="menu-1">Крути и получай свой подарок</h6>
+        </div>
+        <!-- кнопка -->
+        <button class="btn-spin btn-green" type="submit">Вращать рулетку</button>
+      </div>
     </div>
   </div>
 </div>
