--- a/app/components/header.html
+++ b/app/components/header.html
@@ -105,7 +105,7 @@
                   <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
                 </div>
                 <div class="head__info-item">
-                  <button class="btn-green menu-1 modal-call" type="button" data-id="wheel">
+                  <button class="btn-green menu-1 modal-call" type="button" data-id="spinner">
                     Заказать звонок
                   </button>
                 </div>
