--- a/app/components/header.html
+++ b/app/components/header.html
@@ -105,7 +105,7 @@
                   <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
                 </div>
                 <div class="head__info-item">
-                  <button class="btn-green menu-1 modal-call" type="button" data-id="spinner">
+                  <button class="btn-green menu-1 modal-call" type="button" data-id="callback">
                     Заказать звонок
                   </button>
                 </div>
@@ -176,10 +176,10 @@
                   </ul>
                 </li>
                 <li class="menu__item">
-                  <a href="#!" class="menu__link menu-1">Вопрос-ответ</a>
+                  <a href="#!" class="menu__link menu-1 modal-call" data-id="spinner">Вопрос-ответ</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#!" class="menu__link menu-1">Контакты</a>
+                  <a href="#!" class="menu__link menu-1 modal-call" data-id="wheel">Контакты</a>
                 </li>
                 <li class="menu__item">
                   <form class="menu__search" action="#">
