--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -9,6 +9,8 @@
     --green-hover: #2BAC74;
     --green-active: #03844C;
     --red: #D43E3E;
+    --yellow: #FFB628;
+    --blue: #171831;
 
     --bg: #F9F9F9;
 }
