--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -62,6 +62,10 @@
 
 .case {
 
+  &__inner {
+    position: relative;
+  }
+
   &__head {
     display: flex;
     flex-direction: column;
@@ -95,12 +99,7 @@
   }
 
   &__slider {
-    display: none;
     margin-left: -500px;
-
-    &.active {
-      display: block;
-    }
 
     &-item {
       padding: 40px 0 100px;
@@ -158,6 +157,20 @@
 
     .slick-slide {
       margin: 0 100px 0 0;
+    }
+  }
+
+  .slider__wrapper {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    z-index: -1;
+
+    &.active {
+      opacity: 1;
+      visibility: visible;
+      position: relative;
+      z-index: 1;
     }
   }
 
@@ -880,12 +893,8 @@
       }
     }
 
-    .slick-arrow.slick-disabled {
-      background: var(--grey2, #EFEFEF);
-
-      path {
-        stroke: var(--grey, #A7A7A7);
-      }
+    .slick-arrow.slick-disabled path {
+      stroke: var(--grey, #A7A7A7);
     }
 
     .slick-list {
@@ -1381,6 +1390,7 @@
     border-radius: 8px;
     background: var(--white, #fff);
     width: fit-content;
+    height: 50px;
 
     &::placeholder {
       color: var(--grey, #A7A7A7);
