--- a/app/scss/pages/services.scss
+++ b/app/scss/pages/services.scss
@@ -6,6 +6,11 @@
     gap: 30px;
   }
 
+  &__slider {
+    margin-left: -15px;
+    width: calc(100% + 30px);
+  }
+
   &__slider-item {
     width: calc(33% - 20px);
   }
@@ -14,6 +19,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin: 0 15px;
 
     &-block {
       position: relative;
