--- a/app/scss/pages/project.scss
+++ b/app/scss/pages/project.scss
@@ -365,19 +365,14 @@
 
   .built {
     padding: 100px 0;
-    background: var(--bg, #F9F9F9);
-  }
-
-  .built__item-content {
-    background: var(--bg, #F9F9F9);
   }
 
   .built__item-content::before {
-    background: radial-gradient(circle at right top, transparent 30px, var(--bg, #F9F9F9) 30px);
+    background: radial-gradient(circle at right top, transparent 30px, var(--white, #fff) 30px);
   }
 
   .built__item-content::after {
-    background: radial-gradient(circle at right top, transparent 30px, var(--bg, #F9F9F9) 30px);
+    background: radial-gradient(circle at right top, transparent 30px, var(--white, #fff) 30px);
   }
 }
 
@@ -422,13 +417,14 @@
 
   &__inner {
     display: grid;
-    grid-template-rows: 1fr auto auto;
+    grid-template-rows: 1fr auto 1fr;
     grid-template-columns: auto 1fr;
-    column-gap: 130px;
+    gap: 30px 130px;
   }
 
   &__head {
     max-width: 270px;
+    grid-row: 1/2;
   }
 
   &__suptitle {
