--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -99,7 +99,7 @@
   }
 
   &__slider {
-    margin-left: -500px;
+    /*margin-left: -330px;*/
 
     &-item {
       padding: 40px 0 100px;
@@ -156,7 +156,7 @@
     }
 
     .slick-slide {
-      margin: 0 100px 0 0;
+      margin: 0 50px 0 0;
     }
   }
 
@@ -176,10 +176,10 @@
 
   &__item {
     display: grid;
-    grid-template-columns: 68.15% auto;
+    grid-template-columns: 64.28% auto;
     justify-content: space-between;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
   }
 
   &__btn {
@@ -188,14 +188,15 @@
 
   &__cover {
     position: relative;
-    max-width: 1070px;
+    max-width: 900px;
     width: 100%;
 
     &-img {
       object-fit: cover;
       border-radius: 30px;
       position: relative;
-      max-width: 1070px;
+      max-width: 900px;
+      aspect-ratio: 1070/570;
       width: 100%;
       max-height: 570px;
     }
@@ -238,7 +239,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    padding: 50px 0;
+    /*padding: 50px 0;*/
     max-width: 450px;
   }
 
@@ -582,7 +583,7 @@
   &__block {
     display: flex;
     align-items: center;
-    gap: 130px;
+    gap: 80px;
 
     margin-bottom: 40px;
 
@@ -590,7 +591,7 @@
       margin-bottom: 0;
 
       .advantages__img {
-        margin: 0 calc((100% - 700px) - 845px) 0 0;
+        margin: 0 calc((100% - 650px) - 845px) 0 0;
       }
     }
   }
@@ -600,7 +601,7 @@
     height: 600px;
     object-fit: cover;
     border-radius: 30px;
-    margin: 0 0 0 calc((100% - 700px) - 845px);
+    margin: 0 0 0 calc((100% - 650px) - 845px);
   }
 
   &__list {
