В project.scss в plan__list-img height изменил на 100%. Также plan__list-item добавил max-width: 170px;

--- a/app/scss/pages/project.scss
+++ b/app/scss/pages/project.scss
@@ -315,6 +315,7 @@
       border-radius: 8px;
       background: var(--bg, #F9F9F9);
       padding: 10px;
+      max-width: 170px;
       min-width: 100%;
       max-height: 86px;
       margin-bottom: 10px;
@@ -527,6 +528,10 @@
     top: -45px;
     left: -40px;
     z-index: -1;
+  }
+
+  &__name {
+    color: var(--black, #2E2D2D);
   }
 
   &__img {
