--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1190,6 +1190,11 @@ input[type=radio] + label::before {
   transition: transform 0.2s;
   overflow: hidden;
 }
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
 .modal .modal__close-btn {
   position: absolute;
   top: 40px;
@@ -3307,7 +3312,7 @@ input[type=radio] + label::before {
 }
 .plan__list-img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   opacity: 0.1;
 }
