--- a/app/scss/pages/project.scss
+++ b/app/scss/pages/project.scss
@@ -323,7 +323,7 @@
 
     &-img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: cover;
       opacity: 0.1;
     }
